# whisper-finetune

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  test.ipynb
ML-Quickstart/: __init__.py
ML-Quickstart/config/base/data/: default.yaml
ML-Quickstart/config/base/model/: default.yaml
ML-Quickstart/config/transcription/: train.yaml
ML-Quickstart/config/transcription/data/: FLDP.yaml  default.yaml  maestro.yaml
ML-Quickstart/config/transcription/model/: combined.yaml  default.yaml  onset_offset.yaml  pedal.yaml
ML-Quickstart/config/transcription/trainer/: default.yaml  fine_tune.yaml
ML-Quickstart/config/whisper-finetune/: train.yaml
ML-Quickstart/config/whisper-finetune/data/: default.yaml
ML-Quickstart/config/whisper-finetune/model/: default.yaml
ML-Quickstart/config/whisper-finetune/trainer/: default.yaml
ML-Quickstart/data/raw/: .gitkeep
ML-Quickstart/manifest_sns/: __init__.py  email.py  email_args.py  manifest_handler.py
ML-Quickstart/src/base/: __init__.py  main.py
ML-Quickstart/src/base/constants/: __init__.py
ML-Quickstart/src/base/data_utils/: __init__.py  audio_utils.py  datamodule.py
ML-Quickstart/src/base/models/: __init__.py  base.py  loss.py  metrics.py  model_blocks.py
ML-Quickstart/src/transcription/: main.py
ML-Quickstart/src/transcription/constants/: __init__.py
ML-Quickstart/src/transcription/data_utils/: datamodule.py  midi_utils.py  preprocess_files.py
ML-Quickstart/src/transcription/inference/: __init__.py  inference.py
ML-Quickstart/src/whisper-finetune/: main.py
(+42 files in other folders)
